# last-translation-benchmark

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.template.toml  main.py  package-lock.json  pyproject.toml
.github/: .pre-commit-config.yaml  copilot-instructions.md
.github/workflows/: test.yaml
misc/: index.php
misc/proxy/: .htaccess  index.php  proxy.php
scripts/: 01-quest.sh  01-sync.sh  02a-extract_authors.py  02b-extract_submissions.py  03a-bake_results.py  03a-bake_results_models.py  03b-submission_overview.py  03c-bake_results_slides.py  04a-migrate_db_json.py  04b-migrate_comments.py  04b-migrate_verifcation_rules.py  04c-migrate_comments_fix.py  04f-migrate_add_human.py  04g-migrate_reject_to_return.py  04h-migrate_add_notification.py  04i-migrate_comment_timestamp.py  05a-test_email.py  05b-test_openrouter_limits.py
scripts/migration/: 02-migrate_verifcation_rules.py  03-migrate_comments.py  04-migrate_comments_fix.py  05-migrate_point_model.py  06-migrate_add_human.py  07-migrate_reject_to_return.py  08-migrate_add_notification.py  09-migrate_comment_timestamp.py  10-migrate_user_defaults.py  11-migrate_add_reviewed_by.py  13-migrate_username.py
server/: __init__.py  __main__.py  auth.py  db.py  languages.py  models.py  routers.py  services.py  utils.py
server/tests/: mock.py
static/: annotator.bundle.js  annotator.html  index.bundle.js  index.html  senior.bundle.js  senior.html  style.css
web/: package.json  tsconfig.json  webpack.config.js
web/src/: admin.html  admin.ts  annotator.html  annotator.ts  api.ts  contribute.html  contribute.ts  contributor.html  contributor.ts  dashboard.html  dashboard.ts  index.html  index.ts  instructions.html  profile.html  profile.ts  review.html  review.ts  reviewer.html  reviewer.ts  senior.html  senior.ts  style.css  utils.ts
web/src/assets/: instructions.html  style.css
