[project]
name = "last-translation-benchmark"
version = "0.0.1"
description = "A platform for collecting difficult-to-translate texts."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Vilém Zouhar", email = "vilem.zouhar@gmail.com" }]
keywords = [
    "translation",
    "benchmark",
    "annotation",
    "human evaluation",
]
dependencies = [
    "fastapi >= 0.110.0",
    "uvicorn >= 0.29.0",
    "httpx >= 0.27.0",
    "deep-translator >= 1.11.4",
    "openrouter >= 0.9.1",
    "aiosqlite >= 0.20.0",
]

[project.optional-dependencies]
dev = ["pytest", "pre-commit"]

[project.urls]
Repository = "https://github.com/zouharvi/last-translation-benchmark"
Issues = "https://github.com/zouharvi/last-translation-benchmark/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { last_translation_benchmark = "server" }
packages = ["last_translation_benchmark"]
